# pipeline-obs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboards/: grafana.json
otep/: otep-data-pipeline-semconv.md
schema/: semantic-conventions.yaml
src/pipeline_obs/: __init__.py  cli.py  schema.py
src/pipeline_obs/collectors/: __init__.py  base.py  databricks.py  dbt.py
src/pipeline_obs/exporters/: __init__.py  jsonl.py  otel.py
tests/: test_collectors.py  test_schema.py
